fixes history overlap

--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ h1{
 }
 #history{
     width: 20%;
-    margin-top:100px;
+    margin-top:160px;
     padding:20px;
     position: relative;
     z-index: 1;
